src/index.css
@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,700');

html, body {
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  font-family: sans-serif;
}

p {
  font-family: "Roboto Slab", serif;
  font-weight: 300;
  font-size: 18px;
}

button {
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
  font-size: 16px;
  color: white;
  padding: 0.7em 1.4em 0.7em 1.4em;
  border-radius: 14px;
  border-style: none;
  vertical-align: center;
  cursor: pointer;

  transition-duration: 0.3s;
  outline: 0;
}
button:active {
  transform: scale(0.9);
}

input {
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
  font-size: 16px;
  padding: 0.7em 1.4em 0.7em 1.4em;
  margin-right: 10px;
  border-radius: 14px;
  border-style: solid;
  border-color: #aaa;
  outline: 0;
}

::placeholder {
  color: #bbb;
}

.Flair {
  background: url("assets/Waves/Header_Curve.svg") no-repeat;
  display:flex;
  background-size: cover;
}

.footerFlair {
  background: url("assets/Waves/FooterCurve.svg") no-repeat;
  background-size: cover;
  height: 100vh;
}

.footer {
  display:flex;
  align-items: center;
  justify-content: center;
  margin-top: 10vh;
  height: 100vh;
  width: 100%;
}


.headerbar {
  padding-top: 20%;
  margin-left: 12%;
  margin-bottom: 23%;
  align-items: center;
  display: flex;
}

.Title {
  font-family: 'Roboto', sans-serif;
  font-weight: 100;
  color: #ffffff;
  display: inline;
  line-height: 0%;
  font-size: 5vw;
}

.Bold {
  font-family: 'Roboto', sans-serif;
  font-weight: 700;
  color: #ffffff;
  display: inline;
  line-height: 0%;
  font-size: 5vw;
}

.Date {
  font-family: 'Roboto', sans-serif;
  font-weight: 100;
  color: #ffffff;
  line-height: 0%;
  font-size: 2vw;
}

.Location {
  font-family: 'Roboto', sans-serif;
  font-weight: 100;
  color: #ffffff;
  line-height: 10%;
  font-size: 2vw;
}

.TracksAndWorkshops {
  position: relative;
  display: flex;
  min-height: 90vw;
}

.background-div1 {
  background: url("assets/Waves/MidCurve.svg") no-repeat;
  background-size: cover;

  position: absolute;
  height: 40vw;
  width: 100%;
  z-index: -1;
}

.background-div2 {
  background-color: #292563;

  position: absolute;
  width: 100%;
  height: calc(100% - 88vw);
  z-index: -1;

  margin-top: 39vw;
}

.background-div3 {
  background: url("assets/Waves/MidCurve.svg") right bottom no-repeat;
  background-size: cover;

  position: absolute;
  height: 50vw;
  width: 100%;
  z-index: -1;

  bottom: 0;
}


.TracksTitle{
  margin-left: 6% !important;
}

@media only screen and (min-width: 500px) {
  .TracksTitle {
    text-align: right;
  }
}

@media only screen and (max-width: 500px) {
  .icons1 {
    width: 40px;
    height: auto;
  }

  .icons2 {
    height: 40px;
    width: auto;
  }

  .Title {
    font-size: 8vw;
  }

  .Bold {
    font-size: 8vw;
  }

  .Date {
    font-size: 3vw;
  }

  .Location {
    font-size: 3vw;
  }
}

